Add "Promotion Applied" and "FREE Shipping"